Feat: Implement Security Microservice Authorization with JWE

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,7 +1,9 @@
-FROM gradle:8.5-jdk21 AS  build
+FROM gradle:8.5-jdk21 AS build
 COPY --chown=gradle:gradle . /home/gradle/src
 WORKDIR /home/gradle/src
-RUN gradle build --no-daemon
+COPY gradle.properties /home/gradle/.gradle/
+ENV SPRING_PROFILES_ACTIVE=test
+RUN gradle build --no-daemon -x test
 
 FROM openjdk:21-jdk-slim
 EXPOSE 8080
