Fix: Refactorize JweAuthFilter validation for working security

--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -16,7 +16,9 @@ spring:
         format_sql: true
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
-
+  output:
+    ansi:
+      enabled: always
 ---
 spring:
   config:
@@ -36,3 +38,6 @@ spring:
         format_sql: true
     database: h2
     database-platform: org.hibernate.dialect.H2Dialect
+  output:
+    ansi:
+      enabled: always
