--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -3,7 +3,7 @@ COPY --chown=gradle:gradle . /home/gradle/src
 WORKDIR /home/gradle/src
 COPY gradle.properties /home/gradle/.gradle/
 ENV SPRING_PROFILES_ACTIVE=test
-RUN gradle build --no-daemon -x test
+RUN gradle build --no-daemon -x test --stacktrace
 
 FROM openjdk:21-jdk-slim
 EXPOSE 8080
